Fix wrong font directory

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,8 @@
 @font-face {
-    font-family: "Correction Tape";
-    src: url("./media/correction-tape-dont.ttf");
-    font-weight: normal;
-    font-style: normal;
+    font-family: "NorseBold";
+    src: url("../media/Norse-Bold.otf");
+}
+
+p {
+    font-family: "NorseBold";
 }
